REST Full Jersey 1.0 Add Front End Page

--- a/web/home.html
+++ b/web/home.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+    </script>
+    <!--<script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.3.1.min.js"/>-->
 </head>
 <body onload="loadDoc()">
 <div id="teachers">
@@ -10,11 +14,11 @@
 </div>
 <br>
 <br>
-<button type="button" > Search </button>
-<button type="button" > Insert </button>
-<button type="button" > Update </button>
+<button id="search" onclick="seachPage()" > Search</button>
+<button id="insert" onclick="insertPage()"> Insert</button>
 
 <script src="resource/js/home_js.js">
+
 
 </script>
 </body>
