--- a/web/insert.html
+++ b/web/insert.html
@@ -5,6 +5,32 @@
     <title>Title</title>
 </head>
 <body>
+<div>
+    <form action="./" method="post">
+        <table border="1px">
 
+            <tr>
+                <td><label>First Name</label></td>
+                <td><input type="text" id="fname" name="fname"/></td>
+            </tr>
+            <tr>
+                <td><label>Last Name</label></td>
+                <td><input type="text" id="lname" name="lname"/></td>
+            </tr>
+            <tr>
+                <td><label>Style Name</label></td>
+                <td><input type="text" id="style" name="style"/></td>
+            </tr>
+        </table>
+        <input type="submit" value="Insert"/>
+        <button type="button" onclick="homePage()" >Home</button>
+    </form>
+
+</div>
+
+<script src="resource/js/home_js.js">
+
+
+</script>
 </body>
 </html>
