--- a/web/search.html
+++ b/web/search.html
@@ -3,8 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+    </script>
 </head>
 <body>
 
+<table>
+
+    <tr>
+        <td><label>Search By Name</label></td>
+        <td><input type="text" id="searchField" placeholder="جستجو بر اساس نام استاد"/></td>
+    </tr>
+
+</table>
+<div id="teachers">
+
+</div>
+<button onclick="homePage()">Home</button>
+<button onclick="search()">Search</button>
+<script src="resource/js/home_js.js">
+
+
+</script>
 </body>
 </html>
