--- a/web/insert.html
+++ b/web/insert.html
@@ -3,28 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
+
+    </script>
 </head>
 <body>
 <div>
-    <form action="./" method="post">
-        <table border="1px">
+    <table border="1px">
 
-            <tr>
-                <td><label>First Name</label></td>
-                <td><input type="text" id="fname" name="fname"/></td>
-            </tr>
-            <tr>
-                <td><label>Last Name</label></td>
-                <td><input type="text" id="lname" name="lname"/></td>
-            </tr>
-            <tr>
-                <td><label>Style Name</label></td>
-                <td><input type="text" id="style" name="style"/></td>
-            </tr>
-        </table>
-        <input type="submit" value="Insert"/>
-        <button type="button" onclick="homePage()" >Home</button>
-    </form>
+        <tr>
+            <td><label>First Name</label></td>
+            <td><input type="text" id="fname" name="fname"/></td>
+        </tr>
+        <tr>
+            <td><label>Last Name</label></td>
+            <td><input type="text" id="lname" name="lname"/></td>
+        </tr>
+        <tr>
+            <td><label>Style Name</label></td>
+            <td><input type="text" id="style" name="style"/></td>
+        </tr>
+    </table>
+    <br>
+
+    <button type="button" onclick="homePage()">Home</button>
+    <button type="submit" value="Insert" onclick="insertTacher()">Save</button>
 
 </div>
 
