--- a/web/insert.html
+++ b/web/insert.html
@@ -6,28 +6,43 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
 
     </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </head>
 <body>
+<ul class="nav justify-content-center nav-pills">
+
+    <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/home.html">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/search.html">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="http://localhost:8080/insert.html">Insert</a>
+    </li>
+</ul>
+<br>
 <div>
-    <table border="1px">
+    <table border="1px" class="table table-hover">
 
         <tr>
             <td><label>First Name</label></td>
-            <td><input type="text" id="fname" name="fname"/></td>
+            <td><input class="form-control" type="text" id="fname" name="fname"/></td>
         </tr>
         <tr>
             <td><label>Last Name</label></td>
-            <td><input type="text" id="lname" name="lname"/></td>
+            <td><input class="form-control" type="text" id="lname" name="lname"/></td>
         </tr>
         <tr>
             <td><label>Style Name</label></td>
-            <td><input type="text" id="style" name="style"/></td>
+            <td><input class="form-control" type="text" id="style" name="style"/></td>
         </tr>
     </table>
     <br>
 
-    <button type="button" onclick="homePage()">Home</button>
-    <button type="submit" value="Insert" onclick="insertTacher()">Save</button>
+    <button class="btn btn-success" type="submit" value="Insert" onclick="insertTacher()">Save</button>
 
 </div>
 
