--- a/web/search.html
+++ b/web/search.html
@@ -6,14 +6,29 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js">
 
     </script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
 </head>
 <body>
+<ul class="nav justify-content-center nav-pills">
 
+    <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/home.html">Home</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link active" href="http://localhost:8080/search.html">Search</a>
+    </li>
+    <li class="nav-item">
+        <a class="nav-link" href="http://localhost:8080/insert.html">Insert</a>
+    </li>
+</ul>
+<br>
 <table>
 
     <tr>
         <td><label>Search By Name</label></td>
-        <td><input type="text" id="searchField" placeholder="جستجو بر اساس نام استاد"/></td>
+        <td><input class="form-control" type="text" id="searchField" placeholder="جستجو بر اساس نام استاد"/></td>
     </tr>
 
 </table>
@@ -23,8 +38,7 @@
 </div>
 <br>
 
-<button onclick="homePage()">Home</button>
-<button onclick="search()">Search</button>
+<button class="btn btn-success" onclick="search()">Search</button>
 <script src="resource/js/home_js.js">
 
 
