--- a/web/home.html
+++ b/web/home.html
@@ -41,20 +41,42 @@
 
         <tr>
             <td><label>First Name</label></td>
-            <td><input type="text" id="fname" name="fname"/></td>
+            <td><input class="form-control" type="text" id="fname" name="fname"/></td>
         </tr>
         <tr>
             <td><label>Last Name</label></td>
-            <td><input type="text" id="lname" name="lname"/></td>
+            <td><input class="form-control" type="text" id="lname" name="lname"/></td>
         </tr>
         <tr>
             <td><label>Style Name</label></td>
-            <td><input type="text" id="style" name="style"/></td>
+            <td><input class="form-control" type="text" id="style" name="style"/></td>
         </tr>
     </table>
+    <br>
     <button class="btn btn-primary" id="btn_Save" onclick="save()">Save</button>
     <button class="btn btn-primary" id="btn_Cancel" onclick="cancel()">Cancel</button>
 </div>
+
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalCenterTitle">پیام</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                آیا مایل به حذف این معلم هستید؟
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">خیر</button>
+                <button type="button" id="ok" class="btn btn-primary" data-dismiss="modal">بله</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script src="resource/js/home_js.js">
 
 
