--- a/web/home.html
+++ b/web/home.html
@@ -35,10 +35,9 @@
 <br>
 <br>
 
-<div id="form">
+<!--<div id="form">
     <input type="hidden" id="id"/>
     <table id="tbl_form">
-
         <tr>
             <td><label>First Name</label></td>
             <td><input class="form-control" type="text" id="fname" name="fname"/></td>
@@ -55,9 +54,11 @@
     <br>
     <button class="btn btn-primary" id="btn_Save" onclick="save()">Save</button>
     <button class="btn btn-primary" id="btn_Cancel" onclick="cancel()">Cancel</button>
-</div>
+</div>-->
 
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle"
+     aria-hidden="true">
+
     <div class="modal-dialog modal-dialog-centered" role="document">
         <div class="modal-content">
             <div class="modal-header">
@@ -72,6 +73,39 @@
             <div class="modal-footer">
                 <button type="button" id="cancel" class="btn btn-secondary" data-dismiss="modal">خیر</button>
                 <button type="button" id="ok" class="btn btn-primary" data-dismiss="modal">بله</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- ---------------------------Show Update Modal------------------------------ -->
+<div class="modal fade" id="updateRowModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">ذخیره</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <form>
+                    <div class="form-group">
+                        <label for="fname" class="col-form-label">First Name :</label>
+                        <input type="text" class="form-control" id="fname">
+                    </div>
+                    <div class="form-group">
+                        <label for="lname" class="col-form-label">Last Name :</label>
+                        <input type="text" class="form-control" id="lname">
+                    </div>
+                    <div class="form-group">
+                        <label for="style" class="col-form-label">Style :</label>
+                        <input type="text" class="form-control" id="style">
+                    </div>
+                </form>
+            </div>
+            <div class="modal-footer">
+                <button type="button" id="btnCancel" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+                <button type="button" id="btnOK" class="btn btn-primary">Save</button>
             </div>
         </div>
     </div>
